Improvements to code